UnaCloud Agent has been modified to accept only one request at the time.